<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:orientation="vertical"
    tools:context=".ReginActivity">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="36px"
        android:layout_marginRight="36px"
        android:orientation="vertical">

        <EditText
            android:id="@+id/regin_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180px"
            android:drawableLeft="@drawable/phone1"
            android:hint="@string/regin_phone"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regin_yan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:drawableLeft="@drawable/code"
            android:hint="@string/regin_yan"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regin_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/login_pwd"

            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/must"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10px"
                android:layout_marginRight="0px"
                android:text="@string/must"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/regin"
            android:layout_width="560px"
            android:layout_height="80px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240px"
            android:background="@drawable/shape_ufo_pg"
            android:gravity="center"
            android:text="@string/regin"
            android:textColor="#ff5f71"
            android:textSize="18sp" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>