<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="36px"
        android:layout_marginTop="160px"
        android:layout_marginRight="36px"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_main"
            android:src="@drawable/icon_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/phone1"
            android:hint="@string/app_phone"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24px"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/app_pwd"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px">

            <CheckBox
                android:id="@+id/rem_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem_pwd"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/fast_regin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="36px"
                android:text="@string/fast_regin"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="560px"
            android:layout_height="80px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240px"
            android:background="@drawable/shape_ufo_pg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ff5f71"
            android:textSize="18sp" />
    </LinearLayout>
</com.zhy.autolayout.AutoLinearLayout>